--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <main>
         <div class="counter">
-            <h1>counter</h1>
+            <h1>Counter</h1>
             <span id="value">0</span>
             <div class="buttons-container">
                 <button class="btn decrease">Decrease</button>
